Replaced -verbose:gc with -XX:+PrintGCDetails for tests.