@@ -326,7 +326,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.9</version>
                     <configuration>
-                        <argLine>-showversion -Xmx1g -Xms1g -verbose:gc -XX:+PrintCommandLineFlags -XX:MaxGCPauseMillis=1000</argLine>
+                        <argLine>-showversion -Xmx1g -Xms1g -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:MaxGCPauseMillis=1000</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
